--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <form action="/hangman" class="m-page" method="POST">
+        <form action="/HANGMAN_WEB_KOJOK-TARRAF_OUDIN/hangman.html" class="m-page" method="POST">
             <label for="username" class="username">Nom d'utilisateur :</label><br>
             <input type="text" class="inputname" name="username"><br>
             <label for="difficulty" class="difficulties">Difficulté :</label><br>
