modif input type submit in hangman page

--- a/hangman.html
+++ b/hangman.html
@@ -16,7 +16,7 @@
         <form action="/hangman" method="POST">
             <label for="guess">Entrer une lettre ou un mot :</label><br>
             <input type="text" id="guess" name="guess"><br><br>
-            <input type="submit" value="Envoyer">
+            <input class="submit" type="submit" value="Envoyer">
         </form>
     </div>
 </body>
